fix: horizontal scroll

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .App {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-columns: 270px 1fr;
   grid-template-rows: 64px 1fr;
