--- a/src/index.scss
+++ b/src/index.scss
@@ -5,4 +5,5 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
+  overflow-x: hidden;
 }
